@@ -42,6 +42,7 @@ Release 0.9.1
 - merged zm_stripslashes into zm_sanitize
 - use empty where possbile rather than zm_is_empty(); made zm_is_empty a
   simple wrapper around empty rather than trying to be clever
+- removed zm_fire_event()
 
 Release 0.9.0
 - move cache manager page from core to zm_page_cache plugin
